--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise web design Lyon">
+				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo du site la panthère">
 				<h1 class="text-center hero-bloc-text white">
 					Agence La Panthère<br>Entreprise web design Lyon
 				</h1>
