--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 <main class="page-container">
  
 <header class="bloc bgc-white l-bloc" id="bloc-0">
-	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
+	<div class="navbar-brand logo-w3c-css">
 		<img class="logocss" 
-			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="CSS Valide !"></a> 
+			src="img/vcss-blue.webp"
+			alt="CSS Valide !">
+	</div> 
 	<div class="container bloc-sm">
 		<nav class="navbar row">				
 			<div class="navbar-header">	
