--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="La Panthère est une entreprise de web design à Lyon qui accompagne les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
+    <link rel="shortcut icon" type="image/webp" href="./img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">	
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
