--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/webp" href="./img/favicon.webp">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">	
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">	
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	
     <title>accueil - La Panthère entreprise web design Lyon</title>
