--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<h2 class="mg-md text-center tc-black">
+					Formulaire de contact
+				</h2>
+				<form id="form_1" novalidate>
 					<div class="form-group">
 						<label for="name">
 							Nom
@@ -108,6 +111,9 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
+				<h2 class="mg-md text-center tc-black">
+					Accès
+				</h2>
 				<p class="tc-black">
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
@@ -174,7 +180,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </footer>
 </main>
 <script defer src="./js/jquery-2.1.0.min.js"></script>
