--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="navbar-header">	
 				<!--<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise web design Lyon" height="40"></a>
 				-->
-				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise web design Lyon" width="40" height="40"></a>
+				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise web design Lyon" width="217" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
 					<span class="icon-bar"></span><span class="icon-bar"></span>
@@ -83,7 +83,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" alt="icone webdesign">
+					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -94,7 +94,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" alt="icone stratégie">
+					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" width="77" height="60" alt="icone stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -105,7 +105,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" alt="icone illustrations">
+					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" width="77" height="60" alt="icone illustrations">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
@@ -135,7 +135,7 @@
 				<h2 class="mg-md text-center white">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
-				<p class="text-center white">
+				<p class="mg-md text-center white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. <br><br><br>
 				</p>
 			</div>
@@ -153,7 +153,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/journallocal.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/journallocal.webp" loading="lazy" alt="photo refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/journallocal.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/journallocal.webp" loading="lazy" width="470" height="470" alt="photo refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -162,7 +162,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/photographe.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" loading="lazy" alt="photo Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/photographe.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470" height="470" alt="photo Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -173,7 +173,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/voyageur.webp" class="img-responsive portfolio-thumb" loading="lazy" alt="photo Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/voyageur.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470" height="470" alt="photo Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -182,7 +182,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/agencemariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/agencemariage.webp" class="img-responsive portfolio-thumb" loading="lazy" alt="photo Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/agencemariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/agencemariage.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470" height="470" alt="photo Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
@@ -193,7 +193,8 @@
 		</div>
 	</div>
 </section><!-- bloc-4-portfolio -->
-<section id="bloc-5-cta" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper">
+<!--
+	<section id="bloc-5-cta" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center white">
@@ -201,7 +202,20 @@
 			</h2>
 		</div>
 	</div>
-</section><!-- bloc-5-cta -->
+</section> --><!-- bloc-5-cta -->
+
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
+	<div class="container bloc-lg">
+		<div class="row tight-width-whitespace">
+			<div class="col-sm-12">
+				<h2 class="mg-md text-center white">
+					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				</h2>
+			</div>
+		</div>
+	</div>
+</section> <!-- bloc-5-cta  -->
+
 <footer class="bloc bgc-atomic-tangerine d-bloc">
 	<div class="container bloc-sm">
 		<div class="row">
