--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header class="bloc bgc-white l-bloc" id="bloc-0">
 	<div class="navbar-brand logo-w3c-css">
 		<img class="logocss" 
-			src="img/vcss-blue.webp"
+			src="img/vcss-blue.webp" loading="lazy" width="93" height="38"
 			alt="CSS Valide !">
 	</div> 
 	<div class="container bloc-sm">
@@ -94,7 +94,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" width="77" height="60" alt="icone stratégie">
+					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" width="67" height="60" alt="icone stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -105,7 +105,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" width="77" height="60" alt="icone illustrations">
+					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" width="60" height="60" alt="icone illustrations">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
