--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/webp" href="./img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">-->
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/style.min.css">
 
     <title>contact - La Panthère entreprise web design Lyon</title> 
