--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <header class="bloc bgc-white l-bloc ">
 	<div class="navbar-brand logo-w3c-css">
 		<img class="logocss" 
-			src="img/vcss-blue.webp"
+		src="img/vcss-blue.webp" loading="lazy" width="93" height="38"
 			alt="CSS Valide !">
 	</div> 
 	<div class="container bloc-sm">
