--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<!--<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>-->
 <!-- ScrollToTop Button END-->
 
 <footer class="bloc bgc-atomic-tangerine d-bloc">
