remplacement font par icones

--- a/contact.html
+++ b/contact.html
@@ -160,23 +160,28 @@
 				<p class="text-center tc-black">
 					Partenaires<br>
 				</p>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-4 tc-black">
-							<div class="text-center">	
-										<a href="https://openclassrooms.com/fr" target="_blank">OpenClassrooms</a>			
-							</div>				
-						</div>
-						<div class="col-sm-4 tc-black">
-							<div class="text-center">	
-										<a href="https://www.ibm.com/fr-fr" target="_blank">Ibm</a>			
-							</div>				
-						</div>
-						<div class="col-sm-4 tc-black">
-							<div class="text-center">	
-										<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
-							</div>				
+				<div class="row row-no-gutters social">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank" aria-label="lien vers twitter"><i class="fa-brands fa-twitter icon-md"></i></a>
 						</div>
 					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"><i class="fa-brands fa-facebook-f icon-md"></i></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><i class="fa-brands fa-dribbble icon-md"></i></i></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="lien vers instagram"><i class="fa-brands fa-instagram icon-md"></i></a>
+						</div>
+					</div>
+				</div> <!-- row row-no-gutters social -->
 				</div>
 			</div>
 		</div>
