--- a/index.html
+++ b/index.html
@@ -227,22 +227,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank" aria-label="lien vers twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank" aria-label="lien vers twitter"><i class="fa-brands fa-twitter icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"><i class="fa-brands fa-facebook-f icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><i class="fa-brands fa-dribbble icon-md"></i></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="lien vers instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="lien vers instagram"><i class="fa-brands fa-instagram icon-md"></i></a>
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
@@ -275,5 +275,6 @@
 <script defer src="./js/bootstrap.min.js"></script>
 <script defer src="./js/blocs.min.js"></script>
 <script defer src="./js/jquery.touchSwipe.min.js"></script>
+<script src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
 </body>
 </html>
