--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
 <!-- bloc-1-presentation -->
 	
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-	<div class="container bloc-lg">
+<!--<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">-->
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" height="100" alt="logo du site la panthère">
@@ -199,7 +200,7 @@
 	</div>
 </section> --><!-- bloc-5-cta -->
 
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -260,7 +261,7 @@
 									<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
 						</div>				
 					</div>
-				</div>
+				</div> <!-- row row-no-gutters social -->
 			<!--</div>-->
 		</div>
 	</div><!-- container bloc-sm -->
