--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">	
 	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">-->
-	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	
     <title>accueil - La Panthère entreprise web design Lyon</title>
 
@@ -55,7 +55,7 @@
 <!-- bloc-1-presentation -->
 	
 <!--<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -79,7 +79,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
+					<img class="sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -200,7 +200,7 @@
 	</div>
 </section> --><!-- bloc-5-cta -->
 
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere bg-t-edge d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -271,6 +271,6 @@
 <script defer src="./js/bootstrap.min.js"></script>
 <script defer src="./js/blocs.min.js"></script>
 <script defer src="./js/jquery.touchSwipe.min.js"></script>
-<script src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
+<script defer src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
 </body>
 </html>
