--- a/contact.html
+++ b/contact.html
@@ -182,6 +182,6 @@
 <script defer src="./js/blocs.min.js"></script>
 <script defer src="./js/jqBootstrapValidation.min.js"></script>
 <script defer src="./js/formHandler.min.js"></script>
-<script src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
+<script defer src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
 </body>
 </html>
