--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">-->
-    <link rel="stylesheet" type="text/css" href="./css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
     <title>contact - La Panthère entreprise web design Lyon</title> 
 
