--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 	</div>
 </section> --><!-- bloc-5-cta -->
 
-<section class="bloc bgc-dark-slate-blue bg-banniere bg-t-edge d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
