--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" name="name" placeholder="Dupont" class="form-control" value="" required>
+						<input id="name" name="name" placeholder="Dupont" class="form-control" value="" required pattern="[a-zA-Z]*">
 					</div>
 					<div class="form-group">
 						<label  for="email">
