--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 <!-- bloc-1-presentation -->
 	
 <!--<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc  bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" height="100" alt="logo du site la panthère">
+				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" height="100" alt="logo du site la panthère entreprise web design Lyon">
 				<h1 class="text-center hero-bloc-text white">
 					Agence La Panthère<br>Entreprise web design Lyon
 				</h1>
@@ -233,7 +233,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><i class="fa-brands fa-dribbble icon-md"></i></i></a>
+							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><i class="fa-brands fa-dribbble icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
