--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" height="100" alt="logo du site la panthère entreprise web design Lyon">
 				<h1 class="text-center hero-bloc-text white">
-					Agence La Panthère<br>Entreprise web design Lyon
+					Agence La Panthère
 				</h1>
 			</div>
 		</div>
