test suppression fond bleu 3

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" height="100" alt="logo du site la panthère entreprise web design Lyon">
-				<h1 class="text-center hero-bloc-text white">
+				<h1 class="text-center hero-bloc-text marron">
 					Agence La Panthère
 				</h1>
 			</div>
