--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" type="image/webp" href="./img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">	
-	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">-->
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	
     <title>accueil - La Panthère entreprise web design Lyon</title>
 
@@ -79,7 +78,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
+					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" alt="icone webdesign">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -90,7 +89,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" width="67" height="60" alt="icone stratégie">
+					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" alt="icone stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -101,7 +100,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" width="60" height="60" alt="icone illustrations">
+					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" alt="icone illustrations">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
@@ -129,7 +128,7 @@
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center white">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 				</h2>
 				<p class="mg-md text-center white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. <br><br><br>
