--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" alt="icone webdesign">
+					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -89,7 +89,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" alt="icone stratégie">
+					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.webp" loading="lazy" width="67" height="60" alt="icone stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" alt="icone illustrations">
+					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.webp" loading="lazy" width="60" height="60" alt="icone illustrations">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
@@ -147,8 +147,8 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/journallocal.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/journallocal.webp" loading="lazy" width="470" height="470" alt="photo refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+			<div class="col-sm-6 text-center">
+				<a href="#" data-lightbox="img/journallocal.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/journallocal.webp" loading="lazy" width="470px" height="470px" alt="photo refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -157,7 +157,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/photographe.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470" height="470" alt="photo Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/photographe.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470px" height="470px" alt="photo Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -168,7 +168,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/voyageur.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470" height="470" alt="photo Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/voyageur.webp" class="img-responsive portfolio-thumb" loading="lazy" width="470px" height="470px" alt="photo Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
