--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp"  alt="icone webdesign">
+					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.webp" loading="lazy" width="77" height="60" alt="icone webdesign">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
